--- a/src/styles/sass/partials/_aboutme.sass
+++ b/src/styles/sass/partials/_aboutme.sass
@@ -1,6 +1,7 @@
 .aboutme
     max-width: 1200px
     margin: 0 auto
+    padding: 100px 0
     &__title
         font-size: 36px
         padding-bottom: 50px
