--- a/src/styles/sass/partials/_contacts.sass
+++ b/src/styles/sass/partials/_contacts.sass
@@ -1,8 +1,10 @@
 .contacts
-    max-width: 1200px
-    margin: 0 auto
-    padding: 100px 0 100px 0
-
+    background: #243136
+    &__wrap
+        max-width: 1200px
+        margin: 0 auto
+        padding: 100px 0 100px 0
+        
     &__title
         padding-bottom: 50px   
         font-size: 36px 
