--- a/src/styles/sass/partials/_header.sass
+++ b/src/styles/sass/partials/_header.sass
@@ -2,7 +2,8 @@
     padding: 0 55px
 
     &__wrap
-        background: #69e483
+        background: rgb(25,213,205);
+        background: linear-gradient(90deg, rgba(25,213,205,1) 0%, rgba(135,222,206,1) 25%, rgba(255,255,255,1) 100%);
         min-height: 250px
         margin:  30px auto 50px
         border-radius: 20px
