--- a/src/styles/sass/partials/_skills.sass
+++ b/src/styles/sass/partials/_skills.sass
@@ -6,6 +6,7 @@
     &__title
         padding-bottom: 50px
         font-size: 36px
+
     &__list
         display: flex
         justify-content: center
@@ -18,12 +19,14 @@
     &__el
         width: 30%
         text-align: center
+        padding: 10px 20px
 
 
     &__title
+        font-size: 24px
+        padding-bottom: 7px
        
-
-
     &__desc
+        color: #333
 
 
