--- a/src/styles/sass/partials/_header.sass
+++ b/src/styles/sass/partials/_header.sass
@@ -2,17 +2,18 @@
     padding: 0 55px
 
     &__wrap
-        background: rgb(25,213,205);
-        background: linear-gradient(90deg, rgba(25,213,205,1) 0%, rgba(135,222,206,1) 25%, rgba(255,255,255,1) 100%);
+        background: url('../images/header/bg.png')
+        background-size: cover
         min-height: 250px
         margin:  30px auto 50px
         border-radius: 20px
         max-width: 2000px
         padding: 0 30px
-    
+        position: relative
 
 
     &__top
+        z-index: 100
         display: flex
         justify-content: space-between
         align-items: center
@@ -20,9 +21,7 @@
 
     &__logo
         img
-            height: 50px
-
-    &__nav
+            height: 80px
 
     .nav
         &__bar
@@ -31,7 +30,9 @@
             display: flex
             justify-content: space-between
             text-transform: uppercase
-            font-family: Arial, Helvetica, sans-serif
+            font-family: SourceSansPro
+            color: #fff
+            font-weight: 100
 
         &__el
             display: block
@@ -40,25 +41,31 @@
         display: flex
         justify-content: space-between
         align-items: center
-        max-width: 800px
+        max-width: 1200px
         margin: 0 auto
         min-height: 600px
         position: relative
 
     &__hello
-        color: #190468
+        color: #2a1c5c
 
         
     &__title
-        font-size: 55px
+        font-size: 85px
         padding-bottom: 20px
         font-family: BigJohn
         text-transform: uppercase
+        background: #fcefc7
+
+        
 
 
     &__subtitle
-        font-size: 25px
+        font-size: 35px
         font-family: SourceSansPro
+        background: #34961b
+        color: #fff
+        text-transform: uppercase
 
     &__button
         padding: 7px 15px
@@ -76,6 +83,6 @@
 
         img
             height: 600px
-            position: absolute
+            position: relative
             bottom: -50px
             right: 50px
