--- a/src/styles/sass/partials/_skills.sass
+++ b/src/styles/sass/partials/_skills.sass
@@ -12,7 +12,7 @@
         justify-content: center
         flex-wrap: wrap
         margin: 0 auto
-        max-width: 1100px
+        max-width: 1200px
 
 .skill
 
@@ -20,6 +20,9 @@
         width: 30%
         text-align: center
         padding: 10px 20px
+        background: #c7709c
+        margin: 5px
+        height: 250px
 
 
     &__title
