--- a/src/styles/sass/_fonts.scss
+++ b/src/styles/sass/_fonts.scss
@@ -32,4 +32,11 @@
     src: url('../fonts/MyriadPro-Regular.ttf')
 }
 
+@font-face {
+    font-family: 'Peace';
+    src: url('../fonts/Peace.ttf')
+}
 
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
