--- a/src/styles/sass/partials/_skills.sass
+++ b/src/styles/sass/partials/_skills.sass
@@ -1,35 +1,49 @@
 .skills
     padding: 100px 0 100px 0
-    max-width: 1200px
+    max-width: 1500px
     margin: 0 auto
 
     &__title
-        padding-bottom: 50px
-        font-size: 36px
 
     &__list
         display: flex
-        justify-content: center
+        justify-content: space-between
         flex-wrap: wrap
         margin: 0 auto
-        max-width: 1200px
+        max-width: 1500px
 
 .skill
 
     &__el
         width: 30%
-        text-align: center
-        padding: 10px 20px
-        background: #c7709c
-        margin: 5px
-        height: 250px
+        padding: 10px 20px 
+        border: 1px #eee solid 
+        margin: 25px 0 30px
+        height: 270px
+        border-radius: 20px
+        color: #333
+        font-family: Montserrat
+        overflow: hidden
+        
 
+    &__img
+        filter: opacity(40%)
+        margin: 0 auto
+        height: 100px
+        
 
     &__title
         font-size: 24px
-        padding-bottom: 7px
+        padding-bottom: 12px
+        text-align: right
+        font-weight: bold
+
        
     &__desc
         color: #333
+        text-align: left
+        line-height: 25px
+        
+
 
 
