--- a/src/styles/sass/partials/_header.sass
+++ b/src/styles/sass/partials/_header.sass
@@ -30,9 +30,10 @@
             display: flex
             justify-content: space-between
             text-transform: uppercase
-            font-family: SourceSansPro
+            font-family: Montserrat
             color: #fff
-            font-weight: 100
+            font-size: 18px
+            letter-spacing: 2px
 
         &__el
             display: block
@@ -46,19 +47,45 @@
         min-height: 600px
         position: relative
 
+
+ 
+
     &__hello
         color: #2a1c5c
-
         
+    .hello-wrap
+        position: relative
+        overflow: hidden
+        
+    .color1, .color2
+        display: block
+        width: 0%
+        height: 100%
+        position: absolute
+        top: 0
+        left: 0      
+        z-index: 0  
+
+    .color1
+        background: #993939
+
+    .color2   
+        background: #595aa8
+    
+    .title-wrapб .subtitle-wrap
+        overflow: hidden
+
     &__title
         font-size: 85px
         padding-bottom: 20px
         font-family: BigJohn
         text-transform: uppercase
-        background: #fcefc7
-
-        
-
+        background: #eee5ca
+        width: 100%
+        overflow: hidden
+        transition: .2s
+        z-index: 100
+        position: relative
 
     &__subtitle
         font-size: 35px
@@ -66,6 +93,11 @@
         background: #34961b
         color: #fff
         text-transform: uppercase
+        padding-left: 5px
+        width: 100%
+        overflow: hidden
+        z-index: 100
+        position: relative
 
     &__button
         padding: 7px 15px
