--- a/src/styles/sass/partials/_skills.sass
+++ b/src/styles/sass/partials/_skills.sass
@@ -24,6 +24,7 @@
         color: #333
         font-family: Montserrat
         overflow: hidden
+        box-shadow: 2px 2px 5px 0px rgba(57, 73, 171, 0.1)
         
 
     &__img
