--- a/src/styles/sass/partials/_header.sass
+++ b/src/styles/sass/partials/_header.sass
@@ -86,6 +86,7 @@
         transition: .2s
         z-index: 100
         position: relative
+        transform: translateY(-700px)
 
     &__subtitle
         font-size: 35px
@@ -98,6 +99,7 @@
         overflow: hidden
         z-index: 100
         position: relative
+        opacity: 0
 
     &__button
         padding: 7px 15px
@@ -112,9 +114,28 @@
             
 
     &__image
+        transform: scaleX(0)
+        width: 450px
+        height: 400px
+        background: #dad59b
+        display: flex
+        align-items: center
+        justify-content: center
+        overflow: hidden
+        position: relative
+        
+        
 
         img
-            height: 600px
+            width: 90%
             position: relative
-            bottom: -50px
-            right: 50px
+            transform: translateY(-20px)
+            // opacity: 0
+
+        .header-img-wrap
+            position: absolute
+            z-index: 1000
+            display: block
+            width: 450px
+            height: 450px
+            background: #dad59b
