--- a/src/styles/sass/_elements.sass
+++ b/src/styles/sass/_elements.sass
@@ -1,5 +1,5 @@
 .block-title
-    font-family: Montserrat
+    font-family: OpenSans
     text-transform: uppercase
     font-size: 20px
     color: #000
