--- a/src/styles/sass/_global.sass
+++ b/src/styles/sass/_global.sass
@@ -15,8 +15,9 @@
     height: 100%
     margin: 0 auto
     overflow: hidden
-    min-width: 250px
+    min-width: 300px
     position: relative
+    background: #fff
 ul
     list-style: none
     margin: 0
