--- a/src/styles/sass/partials/_header.sass
+++ b/src/styles/sass/partials/_header.sass
@@ -92,30 +92,7 @@
 
                 +mw979
                     width: 130%
-
-            // &::after
-            //     content: ''
-            //     display: block
-            //     position: absolute
-            //     bottom: -5px
-            //     left: 50%
-            //     transform: translateX(-50%)
-            //     width: 0px
-            //     height: 1px
-            //     background: #fff
-            //     transition: .2s   
-
-            // &:hover::after
-            //     width: 150%
-
-            //     +mw979
-            //         bottom: 50%
-            //         height: 2px
-
-                
-
-                      
-                
+      
     .burger
         display: none
         width: 70px
@@ -146,6 +123,7 @@
                 transform:  translateY(-2px)
     .burger__in    
         position: fixed
+        right: 100px
         span
             &:nth-child(1)
                 transform:  translateY(25px) rotate(-135deg)
