--- a/src/styles/sass/partials/_contacts.sass
+++ b/src/styles/sass/partials/_contacts.sass
@@ -66,28 +66,28 @@
         padding: 5px 10px
         font-size: 20px
         border-radius: 5px
-        transition: .2s
+        transition: .1s
         &:focus
             box-shadow: 0px 0px 3px 1px #bd9457
-        &:focus ~ .input-field-name
-            top: -10px
-            font-size: 11px
-            color: #fff
+    .focused
+        top: -10px
+        left: 2px
+        font-size: 11px
+        color: #fff
+
+    .textarea-field-name.focused
+        top: -20px
+
     &__msg
         border: 1px #666 solid
         width: 100%
         resize: none
         font-size: 25px
         border-radius: 5px
-        transition: .2s
+        transition: .1s
+        padding: 5px 10px
         &:focus
             box-shadow: 0px 0px 3px 1px #bd9457
-        &:focus ~ .textarea-field-name
-            top: -20px
-            font-size: 11px
-            color: #fff
-
-
 
     &__links
 
