--- a/src/styles/sass/partials/_header.sass
+++ b/src/styles/sass/partials/_header.sass
@@ -63,10 +63,7 @@
                 height: 40%
                 width: 60%
                 justify-content: center
-                li
-                    height: 60px
-                    line-height: 60px
-                    position: relative
+                    
                     
 
         &__el
@@ -74,26 +71,12 @@
             position: relative
             transform: translateY(0px)
             opacity: 0
-            &::after
-                content: ''
-                display: block
-                position: absolute
-                top: 125%
-                left: 50%
-                height: 2px
-                width: 0%
-                transform: translate(-50%, -50%)
+            padding: 5px 10px
+            margin: 10px 0
+            transition: .1s
+            &:hover
                 background: #34961b
-                opacity: 0
-                transition: .2s
-                +mw979
-                    top: 51%
-            &:hover::after
-                opacity: 1
-                width: 90%
 
-                +mw979
-                    width: 130%
       
     .burger
         display: none
@@ -136,8 +119,6 @@
 
     .burger--active
         display: none
-
-
         
     &__main
         padding: 50px 0 0 0
@@ -151,8 +132,6 @@
         +mw979
             justify-content: center 
 
-
- 
 
     &__hello
         color: #2a1c5c
