--- a/src/styles/sass/_elements.sass
+++ b/src/styles/sass/_elements.sass
@@ -4,3 +4,18 @@
     font-size: 36px
     color: #000
     padding-bottom: 50px
+
+.dark-bg
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background: rgba(0, 0, 0, .8)
+    z-index: -1
+    transition: .5s
+    opacity: 0
+
+    &--active
+        opacity: 1
+        z-index: 100
