--- a/src/styles/sass/partials/_portfolio.sass
+++ b/src/styles/sass/partials/_portfolio.sass
@@ -1,6 +1,6 @@
 .portfolio
     background: #f1faf5
-
+    
     &__title
         font-size: 36px
         padding-bottom: 50px
@@ -41,7 +41,7 @@
         +mw768
             margin: 0 0 15px !important
             width: 95%
-            min-width: 290px
+            min-width: 250px
         
 
     &__over
@@ -93,8 +93,12 @@
 
         +mw768
             width: 95%
-            min-width: 290px
+            min-width: 250px
             align-items: center
+    &__title
+        color: #000
+        font-weight: 100
+        font-family: Roboto
 
     &__buttons
         display: flex
