--- a/src/styles/sass/partials/_skills.sass
+++ b/src/styles/sass/partials/_skills.sass
@@ -1,5 +1,5 @@
 .skills
-    padding: 100px 30px 100px 
+    padding: 100px 0px 100px 
     max-width: 1500px
     margin: 0 auto
 
@@ -11,6 +11,7 @@
         flex-wrap: wrap
         margin: 0 auto
         max-width: 1500px
+        padding: 0 30px
         +mw480
             justify-content: center
 
@@ -31,7 +32,8 @@
         +mw979
             width: 47%
         +mw480
-            width: 85%
+            width: 95%
+            margin-bottom: 0
         
 
     &__img
