--- a/src/styles/sass/partials/_header.sass
+++ b/src/styles/sass/partials/_header.sass
@@ -211,6 +211,7 @@
         z-index: 100
         position: relative
         opacity: 0
+        padding: 0 0 5px 0
         +mw979
             +adaptive-font(35, 25)
 
