--- a/src/styles/sass/partials/_contacts.sass
+++ b/src/styles/sass/partials/_contacts.sass
@@ -49,6 +49,7 @@
 
     .forms-wrap
         width: 50%
+        padding-bottom: 50px
         +mw1030
             width: 100%
     .textarea-field-wrap
@@ -102,5 +103,10 @@
         padding-bottom: 20px
         font-size: 16px
         font-weight: 100
+
+    &__year
+        text-align: center
+        line-height: 20px
+        padding-bottom: 20px
 
 
