--- a/src/styles/sass/partials/_contacts.sass
+++ b/src/styles/sass/partials/_contacts.sass
@@ -6,7 +6,7 @@
     &__wrap
         max-width: 1500px
         margin: 0 auto
-        padding: 100px 0 100px 0
+        padding: 100px 0 70px 0
                 
 
     &__title
@@ -89,6 +89,7 @@
         border-radius: 5px
         transition: .1s
         padding: 5px 10px
+        margin-bottom: 20px
         &:focus
             box-shadow: 0px 0px 3px 2px #bd9457
 
@@ -103,6 +104,18 @@
         padding-bottom: 20px
         font-size: 16px
         font-weight: 100
+
+    &__submit
+        background: #fff
+        width: 200px
+        height: 50px
+        border-radius: 25px
+        cursor: pointer
+        transition: .1s
+        font-family: Roboto
+        font-size: 15px
+        &:hover
+            background: #83e46b
 
     &__year
         text-align: center
