--- a/src/styles/sass/partials/_portfolio.sass
+++ b/src/styles/sass/partials/_portfolio.sass
@@ -106,6 +106,14 @@
         font-weight: 100
         font-family: Roboto
 
+        &:before
+            content: ""
+            display: inline-block
+            width: 3px
+            height: 3px
+            background: #3949ab
+            border-radius: 
+
     &__buttons
         display: flex
 
