--- a/src/styles/sass/_elements.sass
+++ b/src/styles/sass/_elements.sass
@@ -76,8 +76,19 @@
         transition: .2s
 
 .ru-header
-    font-family: OpenSans !important
+    font-family: Montserrat !important
     font-weight: 900
+
+.header__main .ru-header
+    font-size: 60px !important
+
+._err
+    box-shadow: 0px 0px 3px 2px #ee2626 !important
+
+#_err-alert
+    color: red
+    height: 30px
+    margin-bottom: 15px
 
 
 
