--- a/src/styles/sass/partials/_header.sass
+++ b/src/styles/sass/partials/_header.sass
@@ -231,7 +231,7 @@
         z-index: 100
         position: relative
         opacity: 0
-        padding: 0 0 5px 5px
+        padding: 0 5px 5px 5px
         +mw979
             +adaptive-font(35, 25)
 
