--- a/src/styles/sass/partials/_contacts.sass
+++ b/src/styles/sass/partials/_contacts.sass
@@ -52,7 +52,7 @@
         padding-bottom: 50px
         +mw1030
             width: 100%
-            text-align: center
+            text-align: left
     .textarea-field-wrap
         position: relative
 
@@ -115,12 +115,14 @@
         transition: .1s
         font-family: Roboto
         font-size: 15px
+        display: block
         transition: .2s
         &:hover
             background: #2df500
 
         +mw1030
             width: 40%
+            margin: 0 auto
         +mw480
             width: 80%
     &__year
