--- a/src/styles/sass/_elements.sass
+++ b/src/styles/sass/_elements.sass
@@ -81,6 +81,8 @@
 
 .header__main .ru-header
     font-size: 60px !important
+    +mw480
+        font-size: 40px !important
 
 ._err
     box-shadow: 0px 0px 3px 2px #ee2626 !important
@@ -90,5 +92,14 @@
     height: 30px
     margin-bottom: 15px
 
+#_success-alert
+    color: #65ff3e
+    height: 30px
+    margin-bottom: 15px
+
+#_email-alert
+    color: #fffb00
+    height: 30px
+    margin-bottom: 15px
 
 
